# Job-Application-Bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_companies.json  setup.cfg  setup.py
.github/workflows/: ci.yml
app/api/: main.py
app/api/routers/: documents.py  health.py  jobs.py  settings.py
app/api/ui/: __init__.py
app/api/ui/templates/: base.html  dashboard.html  job_detail.html  settings.html  tailor_result.html
app/core/: config.py  logging.py  settings.py
app/db/: models.py  seed.py  session.py  utils.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 20240202_0001_initial_schema.py
app/docs/: achievements_demo.json  exports.py  tailor.py
app/docs/templates/: cover_base.md  resume_base.md
app/ingestion/: base.py  greenhouse.py  lever.py  rss.py  workday_public.py
app/matching/: filters.py  scorer.py  vectorizer.py
app/notify/: emailer.py  telegram.py
app/parsing/: clean_html.py  extract_salary.py  normalize_location.py
app/tasks/: jobs.py  queue.py  schedules.py  seed_companies.json
app/utils/: http.py  text.py  time.py
cli/: aj.py
scripts/: bootstrap_db.sh
tests/e2e/: test_cli.py  test_tailor_flow.py
tests/fixtures/: greenhouse_jobs.json
tests/integration/: test_api_health.py  test_db_bootstrap.py  test_greenhouse_fixture.py  test_jobs_search.py  test_placeholder.py
tests/unit/: test_parsers.py  test_scorer.py  test_text_utils.py
