cat > pyproject.toml <<'TOML'
[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-bot"
version = "0.1.0"
description = "Automated job discovery and tailored application generator"
readme = "README.md"
authors = [{ name = "Manjeet Ahuja" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "celery>=5.4",
  "redis>=5.0",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "scikit-learn>=1.4",
  "structlog>=24.1"
]

[tool.setuptools]
packages = ["app", "cli"]

[project.scripts]
aj = "cli.aj:main"
TOML
